# hermes-cognee-memory

./: LICENSE  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/hermes_cognee_memory/: __init__.md  client.md  config.md  provenance.md  provider.md
hermes_cognee_memory/: client.py  config.py  provider.py
specs/: README.md  memory-bootstrap-2026-07-16.md  operational-evaluation.md  plan.md
src/hermes_cognee_memory/: __init__.py  client.py  config.py  provenance.py  provider.py
tests/: test_client.py  test_plugin_loading.py  test_provider.py
tests/hermes_cognee_memory/: test_client.py  test_config.py  test_http_integration.py  test_init.py  test_plugin_loading.py  test_provenance.py  test_provider.py  test_security_lifecycle.py
