[build-system]
requires = ["setuptools>=77,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-cognee-memory"
version = "0.1.0"
description = "Cognee memory provider plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "Haider Sultan" }]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "hermes-agent>=0.18.2,<0.19",
  "pytest>=8.0,<10",
  "pytest-cov>=5,<8",
  "pyyaml>=6.0,<7",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hermes_cognee_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
